# src/app/services/models.ts
@@ -2,4 +2,8 @@
 /* eslint-disable */
 export { AuthentificationRequest } from './models/authentification-request';
 export { AuthentificationResponse } from './models/authentification-response';
+export { GrantedAuthority } from './models/granted-authority';
 export { RegistrationRequest } from './models/registration-request';
+export { UpdateRequest } from './models/update-request';
+export { User } from './models/user';
+export { UserResponse } from './models/user-response';
